# sqlightest

./: .gitignore  CMakeLists.txt  README.md  run.sh
include/: constants.h  conversion.h  dbinfo.h  fileprocessor.h  memory.h  tables.h
include/btree/: btree_main.h  cell.h  column.h  page.h
include/commands/: dbinfo.h  sql.h  tables.h
include/parser/: parser_main.h  tokeniser.h
src/: conversion.c  fileprocessor.c  main.c  memory.c
src/btree/: btree_main.c  cell.c  column.c  page.c
src/commands/: dbinfo.c  query.c  sql.c  tables.c
src/include/: constants.h  db_fileprocessor.h  dbinfo.h  tables.h  utils.h
src/lib/: db_fileprocessor.c  dbinfo.c  tables.c  utils.c
src/parser/: parser_main.c  tokeniser.c
tests/: select_test.c
